- Add prefiring/postfiring vs pt (1D) - Add new channels studying hadronic Ws in ttbar semi leptonic. - Produces a few HLT turnons (HLT_IsoMu24, HLT_Photon45/50EB_TightID_TightIso, HLT_Ele32_WPTight_Gsf ) - Allows to run on emulated quantities (when using custom L1TNano) - Retrieves correctly EtSum (was previously relyin on L1 bits) - Computes additional custom sums, such as L1MHTHFCustomPt30, L1MHTHFCustomPt0 - Add a script to compute rate of single objects, in eta bins (both for unpacked and emulated objects).

--- a/config_cards/full_ZToMuMu.yaml
+++ b/config_cards/full_ZToMuMu.yaml
@@ -7,6 +7,9 @@ Qualities:
     AllQual: -1
     Qual8:  8
     Qual12: 12
+    Qual13: 13
+    Qual14: 14
+    Qual15: 15
 ### The different of regions of eta
 Regions:
     # <label>: [<low bound>, <high bound>]
